cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-metadata-tool-components-only-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 55
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-metadata-tool-components-only-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:41f45e5d-dfd6-4ecb-93b5-9c1bfb734cb3",
  "metadata": {
    "timestamp": "2024-03-20T09:57:38Z",
    "tools": {
      "components": [
        {
          "type": "application",
          "author": "anchore",
          "name": "syft",
          "version": "0.101.1"
        }
      ]
    }
  }
}
